Fix menu overflow

--- a/assets/css/base/baseline.scss
+++ b/assets/css/base/baseline.scss
@@ -1,3 +1,7 @@
 .visually-hidden {
   display: none;
 }
+
+.overflow-hidden {
+  overflow-y: hidden;
+}
